objects/project_cloud__Allocation_Summary__c.object
<CustomObject>
    <fields>
        <fullName>project_cloud__Allocated_Override_Load__c</fullName>
        <label>Allocated Override Load</label>
        <summarizedField>project_cloud__Allocation_Group__c.project_cloud__Load_Override__c</summarizedField>
        <summaryForeignKey>project_cloud__Allocation_Group__c.project_cloud__Allocation_Summary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__Allocation_Group_Count__c</fullName>
        <label>Allocation Groups</label>
        <summaryForeignKey>project_cloud__Allocation_Group__c.project_cloud__Allocation_Summary__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__Available_Load__c</fullName>
        <formula>MAX(1 - project_cloud__Allocated_Override_Load__c, 0.0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Load</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>project_cloud__Balanced_Allocations_Test__c</fullName>
        <description>Deprecated field - Do not use</description>
        <label>Deprecated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Balanced_Allocations__c</fullName>
        <description>Number of allocation groups that do not have a load override</description>
        <label>Balanced Allocations</label>
        <summaryFilterItems>
            <field>project_cloud__Allocation_Group__c.project_cloud__Load_Override__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>project_cloud__Allocation_Group__c.project_cloud__Allocation_Summary__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__Balanced_Hours_Day__c</fullName>
        <formula>(project_cloud__Project_Task__r.project_cloud__Estimated_Hours__c * project_cloud__Available_Load__c) / project_cloud__Project_Task__r.project_cloud__Working_Total__c /*(Project_Task__r.Length__c - Project_Task__r.Non_Working__c)*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balanced Hours Per Day (Calculated)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__End__c</fullName>
        <formula>IF(ISBLANK(project_cloud__Project_Task__c), project_cloud__Project__r.project_cloud__Calculated_End__c, project_cloud__Project_Task__r.project_cloud__End__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Fully_Allocated_Groups__c</fullName>
        <label>Fully Allocated Groups</label>
        <summaryFilterItems>
            <field>project_cloud__Allocation_Group__c.project_cloud__Fully_Allocated__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>project_cloud__Allocation_Group__c.project_cloud__Allocation_Summary__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__Fully_Allocated__c</fullName>
        <formula>project_cloud__Allocation_Group_Count__c &gt; 0 &amp;&amp; project_cloud__Fully_Allocated_Groups__c == project_cloud__Allocation_Group_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fully Allocated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hours_Day__c</fullName>
        <formula>project_cloud__Project_Task__r.project_cloud__Estimated_Hours__c / project_cloud__Project_Task__r.project_cloud__Working_Total__c /*(Project_Task__r.Length__c - Project_Task__r.Non_Working__c)*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Per Day (Calculated)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Hours_Worked__c</fullName>
        <label>Hours Worked</label>
        <summarizedField>project_cloud__Allocation_Group__c.project_cloud__Hours_Worked__c</summarizedField>
        <summaryForeignKey>project_cloud__Allocation_Group__c.project_cloud__Allocation_Summary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__IsAllocated__c</fullName>
        <formula>project_cloud__Allocation_Group_Count__c &gt; 0 &amp;&amp; project_cloud__Unallocated_Group_Count__c &lt; project_cloud__Allocation_Group_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether one or more Allocation Groups have been fully allocated</inlineHelpText>
        <label>IsAllocated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Load_Unit__c</fullName>
        <formula>IF(project_cloud__Balanced_Allocations__c &gt; 0.0, project_cloud__Available_Load__c / project_cloud__Balanced_Allocations__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Load Per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Task</label>
        <referenceTo>project_cloud__Project_Task__c</referenceTo>
        <relationshipLabel>Allocation Summaries</relationshipLabel>
        <relationshipName>Allocation_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>project_cloud__Project__c</referenceTo>
        <relationshipLabel>Allocation Summaries</relationshipLabel>
        <relationshipName>Allocation_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Start__c</fullName>
        <formula>IF(ISBLANK(project_cloud__Project_Task__c), project_cloud__Project__r.project_cloud__Calculated_Start__c, project_cloud__Project_Task__r.project_cloud__Start__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start (Calculated)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Unallocated_Group_Count__c</fullName>
        <inlineHelpText>A count of the number of Allocation Groups that have not been Allocated</inlineHelpText>
        <label>Unallocated Group Count</label>
        <summaryFilterItems>
            <field>project_cloud__Allocation_Group__c.project_cloud__Allocated_Override_Load__c</field>
            <operation>equals</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>project_cloud__Allocation_Group__c.project_cloud__Total_Subscriptions__c</field>
            <operation>equals</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>project_cloud__Allocation_Group__c.project_cloud__Allocation_Summary__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Allocation Summary</label>
    <listViews>
        <fullName>project_cloud__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AS-{0000000000}</displayFormat>
        <label>Allocation Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocation Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>